--- a/.gitignore
+++ b/.gitignore
@@ -192,3 +192,8 @@ docTR_OCR_output.json
 chatgpteasyocr.txt
 chatgptdoctr.txt
 compare_texts.py
+dewarping.py
+pagesegmentnewest.png
+flattest.png
+drjpaper_ocr_comparison_all_frames.xlsx
+DISCONTINUEDcompare_texts.py
